test_suite/tests/compile_fail/empty_arri_attribute.stderr
error: The only supported attribute format for arri is with a list of arguments. Expected usage: `#[arri(...)]`
 --> tests/compile_fail/empty_arri_attribute.rs:5:5
  |
5 |     #[arri]
  |     ^
